--- a/ex01/teste.html
+++ b/ex01/teste.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Página de teste</title>
+    <link rel="stylesheet" href="estilo.css">
+
 </head>
 <body>
-    <h1 style="color:red;font-size:14px">Titulo da página</h1>
-    <h2>sub-titulo da página</h2>
-    <h3>sub-titulo da página</h3>
-    <p>Era uma vez tec.etc.etc..... <p>Segundo paragrafo</p> </p>
-    <a style="font-size: 30px;" href="https:www.Google.com.br">Ir para o site do Google</a> 
-    <img style="width: 100px;" src="https://www.Google.com.br/google.jpg" alt="Logo do Google"><br>
-    <button>Clique em min</button>
+    <h1 id="titulo">Titulo da página</h1>
+
+    <p class="texto">Era uma vez tec.etc.etc..... <p>
+
+    <a class="texto" href="https:www.Google.com.br">Ir para o site do Google</a> 
+
+    <img src="https://www.Google.com.br/google.jpg" alt="Logo do Google">
+    <br>
+
+    <button class="texto">Clique em min</button>
     <h3>lista de bolo</h3>
     <ol>
         <li>Farinha de trigo</li>
