--- a/ex01/teste.html
+++ b/ex01/teste.html
@@ -9,7 +9,8 @@
 <body>
     <h1 id="titulo">Titulo da página</h1>
 
-    <p class="texto">Era uma vez tec.etc.etc..... <p>
+    <p class="texto">Era uma vez tec.etc.etc..... </p>
+    <div></div>
 
     <a class="texto" href="https:www.Google.com.br">Ir para o site do Google</a> 
 
