--- a/ex03/index.html
+++ b/ex03/index.html
@@ -6,10 +6,31 @@
     <title>Document</title>
 </head>
 <body>
+        <a href="#Area 5" title="Ir para area desejada">ir para o site do google</a>
     <h1>Pagina de teste</h1>
-  <a href="www.google.com.br/">
+  <a href="www.google.com.br/"></a> 
+
+    <h2 id="Area 2">Area 2</h2>
     <img src="https://www.google.com.br/google.jpg" >
-    ir para o site do google
-  </a>  
+
+    <h2 id="Area 3">Area 3</h2>
+    <img src="https://www.google.com.br/google.jpg" >
+
+    <h2 id="Area 4">Area 4</h2>
+    <img src="https://www.google.com.br/google.jpg" >
+
+    <h2 id="Area 5">Area 5</h2>
+    <img src="https://www.google.com.br/google.jpg" >
+
+    <h2 id="Area 6">Area 6</h2>
+    <img src="https://www.google.com.br/google.jpg" >
+
+    <h2 id="Area 7">Area 7</h2>
+    <img src="https://www.google.com.br/google.jpg" >
+
+    <h2 id="Area 8">Area 8</h2>
+    <img src="https://www.google.com.br/google.jpg" >
+    
+ 
 </body>
 </html>
