--- a/ex01/teste.html
+++ b/ex01/teste.html
@@ -9,14 +9,12 @@
 <body>
     <h1 id="titulo">Titulo da página</h1>
 
-    <p class="texto">Era uma vez tec.etc.etc..... </p>
-    <div></div>
+    <a class="texto" href="https:www.Google.com.br">Ir para o site do Google</a>
+    <br> 
 
-    <a class="texto" href="https:www.Google.com.br">Ir para o site do Google</a> 
-
-    <img src="https://www.Google.com.br/google.jpg" alt="Logo do Google">
+    
     <br>
-    <button class="texto">Clique em min</button>
+    <button >Clique em min</button>
     <h3>lista de bolo</h3>
     <ol>
         <li>Farinha de trigo</li>
