--- a/ex01/teste.html
+++ b/ex01/teste.html
@@ -7,12 +7,14 @@
 
 </head>
 <body>
-    <h1 id="titulo">Titulo da página</h1>
+   
 
-    <a class="texto" href="https:www.Google.com.br">Ir para o site do Google</a>
+    <a class="texto" href="https:www.Google.com.br">
+        <h1 id="titulo">Titulo da página</h1>
+        <img src="https://www.Google.com.br/google.jpg" >
+    </a>
     <br> 
-
-    
+   
     <br>
     <button >Clique em min</button>
     <h3>lista de bolo</h3>
