Lista e formatação de texto
Lista e formatação de texto

--- a/ex04/index.html
+++ b/ex04/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Lora:ital,wght@1,500&display=swap" rel="stylesheet">
+    
+    
     <link rel="stylesheet" href="estilos.css">
     <title>Formatação de texto</title>
 </head>
@@ -14,6 +19,32 @@
     <P><a href="https://lipsum.com">Lorem ipsum</a> dolor, sit amet consectetur adipisicing elit. Nulla pariatur consectetur repellendus incidunt libero exercitationem, temporibus illo, sit a officiis quo tenetur distinctio, doloribus dolorem repudiandae quibusdam quisquam cupiditate cum?</P>
     <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla pariatur consectetur repellendus incidunt libero exercitationem, temporibus illo, sit a officiis quo tenetur distinctio, doloribus dolorem repudiandae quibusdam quisquam cupiditate cum?</P>
     <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla pariatur consectetur repellendus incidunt libero exercitationem, temporibus illo, sit a officiis quo tenetur distinctio, doloribus dolorem repudiandae quibusdam quisquam cupiditate cum?</P>
+
+    <h2>Listas conceitos</h2>
+    <ol type="a">
+        <li>café</li>
+        <li>
+            chá
+            <ul>
+                <li>
+                    chá preto 
+                    <ul>
+                        <li> t4</li>
+                        <li>t5</li>
+                    </ul>
+                </li>
+                <li>
+                    chá verde 
+                    <ul>
+                        <li>t1</li>
+
+                        <li>t2</li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li>leite</li>
+    </ol>
 
 
 </body>
