--- a/ex05/tabelas.html
+++ b/ex05/tabelas.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
     <title>Criação de tabela</title>
 </head>
 <body>
-    <table width="400" border="1">
+    <h1>Criando formulários</h1>
+    <h2>Area de login</h2>
+    <form action="">
+
+    </form>
+
+    <h2>Area de cadastro</h2>
+    <form action="paginas/login.html">
+        <input type="checkbox">
+    </form>
+    <table >
     <thead>       
              <tr>
                 <th>Item 1</th>
@@ -15,14 +26,21 @@
     </thead>
     <tbody>
         <tr>
-            <td>...</td>
-            <td>..</td>
+            <td>arroz</td>
+            <td>feijão</td>
         </tr>
         <tr>
-            <td>..</td>
-            <td>..</td>
+            <td>alface</td>
+            <td>beteraba</td>
         </tr>
-
+        <tr>
+            <td>morango</td>
+            <td>abacaxi</td>
+        </tr>
+        <tr>
+            <td>morango</td>
+            <td>abacaxi</td>
+        </tr>
     </tbody>  
     </table>
 </body>
