--- a/ex05/tabelas.html
+++ b/ex05/tabelas.html
@@ -3,20 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="tabelas.css">
     <title>Criação de tabela</title>
 </head>
 <body>
-    <h1>Criando formulários</h1>
-    <h2>Area de login</h2>
-    <form action="">
-
-    </form>
-
-    <h2>Area de cadastro</h2>
-    <form action="paginas/login.html">
-        <input type="checkbox">
-    </form>
     <table >
     <thead>       
              <tr>
