--- a/ex05/paginas/formularios02.html
+++ b/ex05/paginas/formularios02.html
@@ -7,9 +7,63 @@
     <title>formulario</title>
 </head>
 <body>
- <form method="post">
+ <form action="login.html" method="post">
+    <fieldset>
+        <legend>Dados pessoais</legend>
+        <label>
+            Primeiro Nome: <br>
+            <input type="text" name="nome" required>
 
-    
+        </label> <br>
+
+        <label>
+            Segundo Sobrenome: <br>
+            <input type="text" name="lastnome" required minlength="2" maxlength="20">
+
+        </label><br>
+        <label>
+            Idade: <br>
+            <input type="number" name="age" min="18" max="100">
+
+        </label> <br>
+        <label>
+            Email: <br>
+            <input type="text" name="email" >
+
+        </label> <br>
+
+
+        <label>
+            Data de nascimento: <br>
+            <input type="date" name="date" min="2023-08-10" max="2024-01-01">
+
+        </label>
+
+    </fieldset>
+
+    <fieldset>
+        <legend>Dados profissionais</legend>
+        <label>
+            Nome da Empresa: <br>
+            <input type="text" name="companynome">
+
+        </label><br>
+
+        <label>
+            Cargo na Empresa: <br>
+            <input type="text" name="cargonome">
+
+        </label><br>
+
+        <label>
+            Eu li e concordo com os <a href="login.html" target="_blank" class="termoslink">termos de uso.</a>
+            <input type="checkbox">
+        </label>
+        
+
+    </fieldset>
+    <input type="submit" value="Cadastrar">
+
  </form>   
 
 </body>
