--- a/ex07/tamanhos.html
+++ b/ex07/tamanhos.html
@@ -7,9 +7,10 @@
     <title>tamanhos</title>
 </head>
 <body>
-    <h1>Titulo do Site</h1>
-    <div class="container">
-
-    </div>
+    <form method="post">
+        <input type="search" name="pesquisa" />
+    <input type="email" name="emal" required />
+    <input type="submit" value="enviar" />
+    </form>
 </body>
 </html>
