--- a/ex07/tamanhos.html
+++ b/ex07/tamanhos.html
@@ -7,10 +7,41 @@
     <title>tamanhos</title>
 </head>
 <body>
-    <form method="post">
-        <input type="search" name="pesquisa" />
-    <input type="email" name="emal" required />
-    <input type="submit" value="enviar" />
+
+   <!-- <div class="container">
+    <form action="repos.html">
+        <p>Usuário</p> <br>
+        <input type="text" autocomplete="on" placeholder="usuario" maxlength="20" minlength="5" required autofocus> <br>
+        <p>Senha</p> <br>
+        <input  type="password" placeholder="senha" maxlength="5" required> <br>
+        <input class="but" type="submit" value="Enviar">
     </form>
+   </div> -->
+    <!-- Tag data vista nesse arquivo( função armanezar dados) -->
+<!--     
+    <div data-nome="Josemar" data-Sobrenome="Sobrenome">
+        Boa noite
+    </div> -->
+
+    <!-- Tag video função simples apenas inserir videos do próprio pc -->
+    
+    <!-- <video width="320" height="240" controls>
+        <source src="_GMail.mp4" type="video/mp4">
+    </video>
+
+    tag audio -->
+
+    <!-- <audio controls autoplay preload loop muted >
+
+        <source  src="audios/audio.mp4" type="audio/mpeg" />
+
+    </audio> -->
+
+
+
+
+
+
+
 </body>
 </html>
