--- a/ex08/index.html
+++ b/ex08/index.html
@@ -2,6 +2,8 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:url" content="file:///C:/Users/rjose/OneDrive/Documentos/HTML-CSS/Curso-de-HTML-CSS/ex08/index.html" />
+    <meta property="og:type" content="article">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
     <title>Document</title>
@@ -9,7 +11,7 @@
 <body>
 
     <div class="teste">
-
+        Estou felilllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll
     </div>
 </body>
 </html>
