--- a/ex08/index.html
+++ b/ex08/index.html
@@ -6,12 +6,10 @@
     <meta property="og:type" content="article">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
-    <title>Document</title>
+    <title>Social Sharing</title>
 </head>
 <body>
-
-    <div class="teste">
-        Estou felilllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll
-    </div>
+    Página de teste......
+    
 </body>
 </html>
