--- a/ex10/index.html
+++ b/ex10/index.html
@@ -8,16 +8,16 @@
      .container{
         background-color: #7777;
         display: flex;
+        flex-wrap: wrap;
         flex-direction: row;
      }
      .container div{
-        flex:1;
+        width: 200px;
         background-color: black;
         color: white;
-        width: 300px;
-        height:300px;
         margin:10px;
      }
+
     </style>
 </head>
 <body>
@@ -26,6 +26,13 @@
         <div>1</div>
         <div>2</div>
         <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+        <div>9</div>
+        <div>10</div>
     </div>
     
 
