--- a/site/index.html
+++ b/site/index.html
@@ -123,7 +123,28 @@
                 <div class="widget_title_text">Make An Appointment</div>
                 <div class="widget_title_bar"></div>
             </div>
-            <div class="widget_body">
+            <div class="widget_body2">
+                <div class="texto">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque sed distinctio ratione alias provident quis cumque totam.</p>
+                </div>
+                <div id="borde"></div>
+                <div class="contato">
+                    <p>by phone: <strong>1-800-643-4300</strong></p>
+                </div>
+                <div id="borde"></div>
+                <div class="contato">
+                    <p>by e-mail: <a href="mailto:medicenter@gmail.com.br">medicenter@gmail.com.br</a></p>
+                </div>
+                <div id="borde"></div>
+                <div class="contato">
+                    <p>or <a href="mailto:medicenter@gmail.com.br">fill in the form</a> on our contato</p>
+                </div>
+                <div id="borde"></div>
+
+
+
+
+
 
             </div>
         </aside>
