--- a/site3/index.html
+++ b/site3/index.html
@@ -27,8 +27,8 @@
                     </label>
     
                     <label id="text">
-                        Informe a marca desejada <br>
-                        <input class="text" type="text" placeholder="informe a marcar do veiculo">
+                        Informe a categoria desejada <br>
+                        <input class="text" type="text" placeholder="informe a categoria do veiculo">
                     </label>
     
                     <label id="text">
