--- a/sites-desenvolvidos-no-curso/site4/pagina-produto/index.html
+++ b/sites-desenvolvidos-no-curso/site4/pagina-produto/index.html
@@ -173,8 +173,27 @@
                 </div>
                 <div id="d2"><h2>Heart Rate Monitor</h2></div>
                 <div id="d2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla iusto assumenda nam doloremque.</div>
+            </div> 
+        </div>
+    </section>
+    <section>
+        <div class="barnner">
+            <div class="img01">
+                <img src="imagens/fundo.png" alt="">
             </div>
             
+            <div class="texto_venda">
+                <h1>Luxury MISSFOX</h1>
+                <h2>$,35.266.00</h2>
+                <a href="#">
+
+                    <div class="botao">Shop Now</div> 
+                </a>
+
+            </div>
+            <div class="img02">
+                <img src="imagens/fundo2.png" alt="">
+            </div>
         </div>
     </section>
 
