--- a/sites-desenvolvidos-no-curso/site5/site-google/pesquisa.html
+++ b/sites-desenvolvidos-no-curso/site5/site-google/pesquisa.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="pesquisa.css">
     <title>Pesquisa Google</title>
+    <link rel="shortcut icon" href="imagens/download.png">
 </head>
 <body>
     <header>
@@ -50,21 +51,27 @@
             <nav id="navbar" >
                 <div class="navbar">
                     <a id="blue" href="#">
+                        <img src="imgs-pesquisa/lupa02.png" alt="">
                         Todas
                     </a>
                     <a href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" style="fill: rgba(84, 84, 84, 1);transform: ;msFilter:;"><path d="M4 8H2v12a2 2 0 0 0 2 2h12v-2H4z"></path><path d="M20 2H8a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2zm-9 12V6l7 4z"></path></svg>
                         Videos
                     </a>
                     <a href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" style="fill: rgba(84, 84, 84, 1);transform: rotate(90deg);msFilter:progid:DXImageTransform.Microsoft.BasicImage(rotation=1);"><path d="M13.707 3.293A.996.996 0 0 0 13 3H4a1 1 0 0 0-1 1v9c0 .266.105.52.293.707l8 8a.997.997 0 0 0 1.414 0l9-9a.999.999 0 0 0 0-1.414l-8-8zM12 19.586l-7-7V5h7.586l7 7L12 19.586z"></path><circle cx="8.496" cy="8.495" r="1.505"></circle></svg>
                         Shopping
                     </a>
                     <a href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" style="fill: rgba(84, 84, 84, 1);transform: ;msFilter:;"><path d="M20 17a1 1 0 0 1-2 0V5a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v13a2 2 0 0 0 2 2h15c1.654 0 3-1.346 3-3V7h-2v10zM12 7h3v2h-3V7zm0 4h3v2h-3v-2zM5 7h5v6H5V7zm0 10v-2h10v2H5z"></path></svg>
                         Notícias
                     </a>
                     <a href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" style="fill: rgba(84, 84, 84, 1);transform: ;msFilter:;"><path d="M19 3H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2zM5 19V5h14l.002 14H5z"></path><path d="m10 14-1-1-3 4h12l-5-7z"></path></svg>
                         Imagens
                     </a>
                     <a href="#">
+                        <svg id="mais" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" style="fill: rgba(84, 84, 84, 1);transform: ;msFilter:;"><path d="M10 10h4v4h-4zm0-6h4v4h-4zm0 12h4v4h-4z"></path></svg>
                         Mais
                     </a>
                     <a id="ferramentas" href="#">
@@ -72,9 +79,71 @@
                     </a>
                 </div>
             </nav>
-
         </div>
     </header>
+    <section>
+        <main>
+            <div class="container">
+                <div class="result">
+                    Aproximadamente 120.000.000 resultados (0,37 segundos)
+                </div>
+                <div class="titulo">
+                    <a href="#">JosemarRodrigues.com.br | PHP do Zero ao Profissional | Curso Oficial B7Web</a>
+                </div>
+                <div class="link">
+                    <a href="#">http://www.josemarrodrigues.com.br</a>
+                </div>
+                <div class="info">
+                    Aprenda PHP do Zero ao Profissional, com o Curso da B7Web. Últimos Dias de Promoção! Curso Completo Atualizado 2019 + Bônus HTML5, CSS3 e Javascript. Alavanque Sua Carreira! Parcelamento em 12 Vezes. PHP na Prática. Aprenda de Forma Rápida. Mais de 600 Aulas.
+                </div>
+                <div class="titulo">
+                    <a href="#">B7Web - Plataforma</a>
+                </div>
+                <div class="link">
+                    <a href="#">http://www.josemarrodrigues.com.br</a>
+                </div>
+                <div class="info">
+                    E-mail: Senha: Esqueci a senha. B7Web 2019. Todos os direitos reservados. Dúvidas? suporte@b7web.com.br.
+                </div>
+                <div class="titulo">
+                    <a href="#">Como Iniciar Na Programação - Palestra Online</a>
+                </div>
+                <div class="link">
+                    <a href="#">http://www.josemarrodrigues.com.br</a>
+                </div>
+                <div class="info">
+                    26 de abril de 2019 20:00 (horário de Brasília). 0Dias. 22Horas. 59Minutos. 54Segundos. RESERVAR MEU LUGAR! Copyright 2018 - Política de Privacidade. X.
+                </div>
+                <div class="titulo">
+                    <a href="#">Josemar Rodriguês - Página inicial | Facebook</a>
+                </div>
+                <div class="link">
+                    <a href="#">http://www.josemarrodrigues.com.br</a>
+                </div>
+                <div class="info">
+                    www.josemarrodrigues.com.br Highlights info row image. Empreendedor · Tutor/Professor. Transparência da PáginaVer mais. O Facebook está mostrando informações ..
+                </div>
+                <div class="pesquisa_rel">
+                    <div class="titulo_rel">
+                        Pesquisas relacionadas a Josemar Rodriguês
+                    </div>
+                    <div id="nav_link_rel">
+                        <div class="link_rel">
+                            <a href="#">Josemar Rodriguês cursos</a>
+                            <a href="#">Josemar Rodriguês alunos</a>
+                            <a href="#">Josemar Rodriguês/guia</a>
+                        </div>
+                        <div class="link_rel">
+                            <a href="#">Josemar Rodriguês backend</a>
+                            <a href="#">Josemar Rodriguês frontend</a>
+                            <a href="#">Josemar Rodriguês wordpress</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </section>
+
 
 </body>
 </html
