--- a/exercicios-fixacao/ex11/index.html
+++ b/exercicios-fixacao/ex11/index.html
@@ -7,21 +7,45 @@
     <title>seletor</title>
 </head>
 <body>
-    <!-- seletor de primeira letra -->
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sint incidunt optio quidem obcaecati libero aut inventore delectus explicabo eligendi, facilis fugit id placeat enim totam temporibus! Mollitia, eveniet doloremque?</p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam et quo quae laboriosam cumque cupiditate ipsa possimus. Dolorem consequatur eveniet, quibusdam labore, magnam necessitatibus incidunt fugiat molestias suscipit vero tempore.
-    </p>
-    <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit explicabo hic vitae temporibus incidunt optio quisquam molestias, voluptates repellendus commodi quidem. Aut, maiores laudantium vitae dolorum tempore sunt rerum saepe.
-    </p>
-
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
-    <div>5</div>
-    
-
+  <div>
+    <table>
+      <tr>
+        <td>Id</td>
+        <td>Name</td>
+        <td>Major</td>
+      </tr>
+      <tr>
+        <td>1001</td>
+        <td>Gopl Murthy</td>
+        <td>Physics</td>
+      </tr>
+      <tr>
+        <td>1002</td>
+        <td>Joy Sen</td>
+        <td>Economics</td>
+      </tr>
+      <tr>
+        <td>1003</td>
+        <td>Chandu Yaday</td>
+        <td>Chemistry</td>
+      </tr>
+      <tr>
+        <td>1004</td>
+        <td>Shalini Gupta</td>
+        <td>Zoology</td>
+      </tr>
+      <tr>
+        <td>1005</td>
+        <td>Vivek Kumar</td>
+        <td>Math</td>
+      </tr>
+      <tr>
+        <td>1006</td>
+        <td>Sameer Ali</td>
+        <td>Botany</td>
+      </tr>
+    </table>
+  </div>
+  
 </body>
 </html>
